Frontend/Components/ItemContainer/ItemContainer.css
.item-container {
    display: flex;
    flex: 9;
    overflow: auto;
    flex-direction: column;
    text-align: center;
    margin: 20px;
}
.search-result{
    width:100%;
}
.item-cards-grid{
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    grid-gap: 20px;
    width: 100%;
    margin-top: 20px;
}

